LUC070-73 RESTART-RETRIEVES - added tests for restarting deposits